<resources>
    <string name="app_name">welezo</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_password">New Password</string>
    <string name="done">Done</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="retype_email">Retype Email</string>
    <string name="your_email_phone_number">Your Email / Phone Number</string>
    <string name="resend">Resend</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="send">Send</string>
    <string name="i_accept_the">I accept the</string>
    <string name="privacy_policy">\tPrivacy Policy</string>
    <string name="and">and</string>
    <string name="terms">Terms</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="your_email">Your Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="we_ve_just_sent_you_an_email_to">We’ve just sent you an email to</string>
    <string name="girigajendra05_gmail_com">girigajendra05@gmail.com.</string>
    <string name="please_check_your_email_and_activate_your_account">Please check your email and activate your account.</string>
    <string name="we_go_through_this_process_to_your_security">We go through this process to your security.</string>
    <string name="ok">OK</string>
    <string name="i_haven_t_received_an_email">I haven’t received an email</string>
    <string name="mailpic">mailpic</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="submit">Submit</string>
    <string name="title_activity_home_sreen">HomeSreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="todo">TODO</string>
    <string name="health">HEALTH</string>
    <string name="travell">TRAVELL</string>
    <string name="wellness">WELLNESS</string>
    <string name="looking_for">looking for?</string>

    <string name="package_images">package_images</string>
    <string name="g">G</string>
    <string name="_46">(46)</string>
    <string name="_4999">$ 4999/-</string>
    <string name="health_checkup">HEALTH CHECKUP</string>
    <string name="share">share</string>
    <string name="see_all">See All</string>
</resources>
