<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    tools:ignore="Overdraw">

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/imageView"
        android:layout_width="107dp"
        android:layout_height="107dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/mailpic" />

    <TextView
        android:layout_marginLeft="18dp"
        android:textColor="@color/black"
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_ve_just_sent_you_an_email_to"
        android:layout_marginStart="18dp" />

    <TextView
        android:layout_marginLeft="18dp"
        android:textColor="@color/black"
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/girigajendra05_gmail_com"
        android:layout_marginStart="18dp" />

    <TextView

        android:layout_margin="18dp"
        android:textColor="@color/black"
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_check_your_email_and_activate_your_account" />

    <TextView
        android:layout_margin="18dp"
        android:textColor="@color/black"
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_go_through_this_process_to_your_security" />

    <Button
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:textColor="@color/white"
        android:background="@drawable/sec_shape"
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginStart="25dp" />

    <TextView
        android:textColor="@color/black"
        android:layout_margin="18dp"
        android:gravity="center"
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_haven_t_received_an_email" />
</LinearLayout>